<resources>
    <string name="app_name">TMMDb</string>

    <string name="home_label">Home</string>
    <string name="search_label">Search</string>
    <string name="favorite_label">Favorites</string>
    <string name="more_label">More</string>
    <string name="profile_label">Profile</string>
    <string name="settings_label">Settings</string>
    <string name="empty_label" />
    <string name="user_review_label">User reviews</string>
    <string name="review_label">Review</string>
    <string name="season_label">Seasons</string>
    <string name="episode_label">Episodes</string>
    <string name="person_label">Person</string>

    <!-- Preference Category Titles -->
    <string name="display_header">Display</string>
    <!-- Titles Preferences -->
    <string name="theme_title">Theme</string>
    <string name="app_language_title">App Language</string>
    <string name="region_title">Region</string>
    <string name="image_quality_title">Image Quality</string>

    <string name="light_value">Light Theme</string>
    <string name="dark_value">Dark Theme</string>
    <string name="system_default_value">System Default</string>

    <string name="high_quality_value">High quality</string>
    <string name="medium_quality_value">Medium quality</string>
    <string name="low_quality_value">Low quality</string>

    <string name="search_hint">Search for a show, movie, cast, e.t.c.</string>

    <string name="recent_searches_label">Recent Searches</string>

    <string name="trending_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="now_playing_movie">Now Playing Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>

    <string name="trending_tv_shows">Top Rated TV Shows</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="on_tv_show">On TV Shows</string>
    <string name="airing_tv_show">Airing Today TV Shows</string>

    <string name="similar_movies">Similar movies</string>
    <string name="cast_label">Cast</string>
    <string name="filmography_label">Filmography</string>

    <string name="bug_report_label">Report Bug</string>
    <string name="source_code_label">Source Code</string>

    <string name="born_label">Born:</string>
    <string name="died_label">Died:</string>
    <string name="place_birth_label">Place of Birth:</string>

    <string name="see_all_label">See All</string>
    <string name="no_connection_error">A data connection is not currently allowed.</string>

    <string name="season_number">Season 1</string>
    <string name="air_date_episode_count">%1$s | %2$s</string>
    <string name="empty_season_description">Season %1$d premiered on %2$s.</string>

    <string name="episode_name">%1$d - %2$s</string>
    <string name="empty_episode_description">Episode %1$d premiered on %2$s.</string>

    <string name="movie_label">Movie</string>
    <string name="tv_show_label">TV Show</string>

    <string name="message_no_result_found">No result found.</string>
</resources>