<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_screen"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home_label" />
    <item
        android:id="@+id/search_screen"
        android:enabled="true"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search_label" />
    <item
        android:id="@+id/favorite_screen"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite_label" />
    <item
        android:id="@+id/profile_screen"
        android:enabled="true"
        android:icon="@drawable/ic_round_menu_24"
        android:title="@string/more_label"/>
</menu>