<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="Movie details"
    app:startDestination="@id/home_screen">

    <fragment
        android:id="@+id/home_screen"
        android:name="com.example.themobilemoviedatabase.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_screen_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_home_screen_to_detailsTvShowFragment"
            app:destination="@id/detailsTvShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/favorite_screen"
        android:name="com.example.themobilemoviedatabase.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_label"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favorite_screen_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_favorite_screen_to_detailsTvShowFragment"
            app:destination="@id/detailsTvShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/search_screen"
        android:name="com.example.themobilemoviedatabase.ui.search.SearchFragment"
        android:label="@string/search_label"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_screen_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_search_screen_to_castFragment"
            app:destination="@id/castFragment" />
        <action
            android:id="@+id/action_search_screen_to_detailsTvShowFragment"
            app:destination="@id/detailsTvShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/settings_screen"
        android:name="com.example.themobilemoviedatabase.ui.settings.SettingsFragment"
        android:label="@string/settings_label">
        <action
            android:id="@+id/action_settings_screen_to_profile_screen"
            app:destination="@id/profile_screen"
            app:popUpTo="@id/profile_screen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profile_screen"
        android:name="com.example.themobilemoviedatabase.ui.profile.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_screen_to_settings_screen"
            app:destination="@id/settings_screen" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.themobilemoviedatabase.ui.details.DetailMovieFragment"
        android:label="@string/empty_label"
        tools:layout="@layout/fragment_detail_movie">
        <action
            android:id="@+id/action_detailFragment_to_reviewFragment"
            app:destination="@id/reviewFragment" />
        <action
            android:id="@+id/action_detailFragment_to_castFragment"
            app:destination="@id/castFragment" />
        <action
            android:id="@+id/action_detailFragment_self"
            app:destination="@id/detailFragment" />
        <argument
            android:name="film_id"
            app:argType="integer" />
        <argument
            android:name="movieTitle"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/castFragment"
        android:name="com.example.themobilemoviedatabase.ui.person.PersonFragment"
        android:label="@string/person_label"
        tools:layout="@layout/fragment_person">
        <action
            android:id="@+id/action_castFragment_to_detailFragment2"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_castFragment_to_personFilmographyFragment"
            app:destination="@id/personFilmographyFragment" />
        <argument
            android:name="personId"
            app:argType="integer" />
        <action
            android:id="@+id/action_castFragment_to_detailsTvShowFragment"
            app:destination="@id/detailsTvShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.example.themobilemoviedatabase.ui.review.ReviewFragment"
        android:label="@string/user_review_label"
        tools:layout="@layout/fragment_review" >
        <argument
            android:name="mediaType"
            app:argType="string" />
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_reviewFragment_to_reviewDetailFragment"
            app:destination="@id/reviewDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/tvSeasonFragment"
        android:name="com.example.themobilemoviedatabase.ui.seasons.TvSeasonFragment"
        android:label="@string/season_label"
        tools:layout="@layout/fragment_tv_season">
        <action
            android:id="@+id/action_tvSeasonFragment_to_tvEpisodeFragment"
            app:destination="@id/tvEpisodeFragment" />
        <argument
            android:name="tvShowId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/tvEpisodeFragment"
        android:name="com.example.themobilemoviedatabase.ui.episodes.TvEpisodeFragment"
        android:label="@string/episode_label"
        tools:layout="@layout/fragment_tv_episode">
        <action
            android:id="@+id/action_tvEpisodeFragment_to_episodeDetailFragment"
            app:destination="@id/episodeDetailFragment" />
        <argument
            android:name="tvShowId"
            app:argType="integer" />
        <argument
            android:name="seasonNumber"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/episodeDetailFragment"
        android:name="com.example.themobilemoviedatabase.ui.episodes.detail.TvEpisodeDetailFragment"
        android:label="@string/empty_label"
        tools:layout="@layout/fragment_tv_episode_detail">
        <action
            android:id="@+id/action_episodeDetailFragment_to_castFragment"
            app:destination="@id/castFragment" />
        <argument
            android:name="tvShowId"
            app:argType="integer" />
        <argument
            android:name="seasonNumber"
            app:argType="integer" />
        <argument
            android:name="episodeNumber"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/personFilmographyFragment"
        android:name="com.example.themobilemoviedatabase.ui.person.PersonFilmographyFragment"
        android:label="@string/filmography_label"
        tools:layout="@layout/fragment_person_filmography">
        <action
            android:id="@+id/action_personFilmographyFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_personFilmographyFragment_to_detailsTvShowFragment"
            app:destination="@id/detailsTvShowFragment" />
        <argument
            android:name="personId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/detailsTvShowFragment"
        android:name="com.example.themobilemoviedatabase.ui.details.DetailsTvShowFragment"
        android:label="@string/empty_label"
        tools:layout="@layout/fragment_details_tv_show">
        <action
            android:id="@+id/action_detailsTvShowFragment_to_tvSeasonFragment"
            app:destination="@id/tvSeasonFragment" />
        <argument
            android:name="tvShowId"
            app:argType="integer" />
        <argument
            android:name="tvShowTitle"
            app:argType="string" />
        <action
            android:id="@+id/action_detailsTvShowFragment_self"
            app:destination="@id/detailsTvShowFragment" />
        <action
            android:id="@+id/action_detailsTvShowFragment_to_reviewFragment"
            app:destination="@id/reviewFragment" />
        <action
            android:id="@+id/action_detailsTvShowFragment_to_tvEpisodeFragment"
            app:destination="@id/tvEpisodeFragment" />
        <action
            android:id="@+id/action_detailsTvShowFragment_to_castFragment"
            app:destination="@id/castFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteItemMovieFragment"
        android:name="com.example.themobilemoviedatabase.ui.favorite.favorite_item.FavoriteItemMovieFragment"
        android:label="fragment_favorite_item_movie"
        tools:layout="@layout/fragment_favorite_item_movie" />
    <fragment
        android:id="@+id/reviewDetailFragment"
        android:name="com.example.themobilemoviedatabase.ui.review.ReviewDetailFragment"
        android:label="@string/review_label"
        tools:layout="@layout/fragment_review_detail">
        <argument
            android:name="reviewId"
            app:argType="string" />
    </fragment>
</navigation>